# ocr-manifest

./: .gitignore  README.md  README.org  download_images.py  pyproject.toml
