[project]
name = "ocr-manifest"
version = "0.1.0"
description = "runs Kraken over images in manifest to produce text files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "kraken>=5.3.0",
    "requests>=2.32.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
reportMissingImports = "error"
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
